2008-03-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-isValidContentName:name]): moved method from
	SOGoAppointmentFolder's isValidAppointmentName.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder -objectClassForContent:content])
	([SOGoContactGCSFolder -deduceObjectForName:inContext:])
	([SOGoContactGCSFolder -requestNamedIsHandledLater:name])
	([SOGoContactGCSFolder -lookupName:inContext:acquire:]): those
	methods were modified to match the ones in SOGoAppointmentFolder,
	in order to manage both vcard and vlist components.

	* SoObjects/Contacts/SOGoContactGCSList.[hm]: new class module
	that implements the list counterpart to VCARD: VLIST.

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor -saveURL]):
	new accessor that returns the url + "saveAsContact".
	([UIxContactEditor
	-shouldTakeValuesFromRequest:requestinContext:context]): changed
	method to match the one from the event and todo editor module.
	([UIxContactEditor -editActionName]): changed to "editAsContact".
	([UIxContactEditor -newAction]): changed method to match the one
	from the event and todo editor module.

	* UI/Contacts/UIxListView.m: new view module for the VLIST format
	components.

	* UI/Contacts/UIxListEditor.m: new edition module for the VLIST
	format components.

	* SoObjects/Contacts/SOGoContactGCSList.m: new controller module
	for the VLIST format.

2008-03-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -isFolderish]): new
	parent method, meant to be overriden.
	([SOGoObject -davIsCollection]): moved method from SOGoFolder up
	to this parent class.

2008-02-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	-davSubscribe:queryContext]): implemented subscribing users other
	that the current one, if the user doing the operation is a superuser.
	([SOGoGCSFolder -davUnsubscribe:queryContext]): same as above for
	unsubscription.
