@@ -54,5 +54,10 @@
       sqlType    = "VARCHAR2(256)";
       allowsNull = YES;
     },
+    {
+      columnName = c_component;
+      sqlType    = "VARCHAR2(10)";
+      allowsNull = NO;
+    },
   );
 }
